yeti/yeti-web/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: yeti
spec:
  template:
    metadata:
      labels:
        yeti: yeti-web
    spec:
      containers:
        - name: yeti
          command:
            - ./yeti.py
            - webserver
          resources:
            limits:
              cpu: 1500m
              memory: 512Mi
            requests:
              cpu: 1000m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/log
              name: logs
            - name: yeti-storage
              mountPath: /opt/yeti/storage
              readOnly: false
          ports:
            - name: noauth
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /observable/
              port: noauth
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /observable/
              port: noauth
        - name: keycloak-gatekeeper
          image: quay.io/keycloak/keycloak-gatekeeper
          securityContext:
            runAsUser: 1001
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /oauth/health
              port: http
          readinessProbe:
            httpGet:
              path: /oauth/health
              port: http
      volumes:
        - name: logs
          emptyDir: {}
        - name: yeti-storage
          persistentVolumeClaim:
            claimName: yeti-storage
