yeti/yeti-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yeti
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    yeti: yeti-web
