yeti/yeti-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yeti
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/secure-backends: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    stable.k8s.psg.io/kcm.provider: http
    ingress.kubernetes.io/proxy-redirect-from: http://localhost:5000/
    ingress.kubernetes.io/proxy-redirect-to: /
    ingress.kubernetes.io/proxy-connect-timeout: 360
    ingress.kubernetes.io/proxy-send-timeout: 360
    ingress.kubernetes.io/proxy-read-timeout: 360
spec:
  rules:
    - host: yeti.csoc.cto-notprod.homeoffice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: yeti
              servicePort: http
  tls:
    - hosts:
        - yeti.csoc.cto-notprod.homeoffice.gov.uk
      secretName: yeti-le-tls
