yeti/yeti-web/networkpolicy-huginn.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yeti-huginn
spec:
  podSelector:
    matchLabels:
      yeti: yeti-web
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: huginn-worker
        - podSelector:
            matchLabels:
              name: huginn-web
      ports:
        - protocol: TCP
          port: noauth
