yeti/yeti-web/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yeti
spec:
  podSelector:
    matchLabels:
      yeti: yeti-web
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
        - podSelector:
            matchLabels:
              name: ingress
      ports:
        - protocol: TCP
          port: http
